--- a/roles/satellite-audio/templates/daemon.conf
+++ b/roles/satellite-audio/templates/daemon.conf
@@ -9,7 +9,7 @@ realtime-priority = 5
 
 # Resample method
 resample-method = speex-float-1
-avoid-resampling = yes
+avoid-resampling = no
 
 # Daemon startup and memory usage
 exit-idle-time = -1  ; Don't exit after idle time in system mode
