--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -19,7 +19,6 @@
   - "{{mosquitto_log_folder}}"
   - "{{zigbee2mqtt_data_folder}}"
   - "{{ring_mqtt_config_folder}}"
-  - "{{openwakeword_data_folder}}"
   - "{{piper_data_folder}}"
   - "{{whisper_data_folder}}"
 
@@ -84,12 +83,19 @@
   - "{{piper_data_folder}}"
   - "{{whisper_data_folder}}"
 
+- name: Create ha network
+  docker_network:
+    name: ha
+    state: present
+
 - name: Start home assistant
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_name: ha
-    pull: yes
+    pull: always
     definition:
-      version: '3.9'
+      networks:
+        ha:
+          external: true
       services:
         homeassistant:
           container_name: homeassistant
@@ -249,48 +255,3 @@
             - "homepage.icon=frigate.png"
             - "homepage.server={{ inventory_hostname }}"
             - "homepage.container=frigate"
-        openwakeword:
-          container_name: openwakeword
-          image: rhasspy/wyoming-openwakeword
-          restart: unless-stopped
-          volumes:
-            - "{{openwakeword_data_folder}}:/custom"
-          ports:
-            - "10400:10400"
-          command: --preload-model jarvis_v2 --preload-model hey_rick --preload-model hey_nabu_v2 --custom-model-dir /custom --debug
-          labels:
-            - 'wud.tag.include=^\d+\.\d+\.\d+$$'
-            - 'wud.link.template=https://github.com/rhasspy/wyoming-openwakeword/releases/tag/v$${major}.$${minor}.$${patch}'
-        whisper:
-          container_name: whisper
-          image: rhasspy/wyoming-whisper
-          command: --model small-int8 --language de
-          volumes:
-            - "{{whisper_data_folder}}:/data"
-          environment:
-            - TZ=Europe/Berlin
-          restart: unless-stopped
-          ports:
-            - 10300:10300
-        piper:
-          container_name: piper
-          image: rhasspy/wyoming-piper
-          command: --voice de_DE-karlsson-low
-          volumes:
-            - "{{piper_data_folder}}:/data"
-          environment:
-            - TZ=Europe/Berlin
-          restart: unless-stopped
-          ports:
-            - 10200:10200
-  register: output
-
-- #ansible.builtin.debug:
-  #  var: output
-
-- ansible.builtin.assert:
-    that:
-      - "output.services.homeassistant.homeassistant.state.running"
-      - "output.services.mosquitto.mosquitto.state.running"
-      #- "output.services.nodered.nodered.state.running"
-
