--- a/roles/dockerproxy/tasks/main.yml
+++ b/roles/dockerproxy/tasks/main.yml
@@ -5,9 +5,10 @@
     state: present
 
 - name: Start dockerproxy
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_name: dockerproxy
-    pull: yes
+    pull: "always"  # Set to "always", "missing", "never", or "policy" based on your needs
+    state: present  # Ensure the services are started
     definition:
       version: '3.3'
       networks:
@@ -18,28 +19,30 @@
           image: ghcr.io/tecnativa/docker-socket-proxy:latest
           container_name: dockerproxy
           environment:
-            - LOG_LEVEL=debug
-            - POST=1
-            - CONTAINERS=1
-            - IMAGES=1
-            - INFO=1
-            - NETWORKS=1
-            - SERVICES=1
-            - TASKS=1
-            - VOLUMES=1
-            - DISABLE_IPV6=1
+            LOG_LEVEL: debug
+            POST: "1"
+            CONTAINERS: "1"
+            IMAGES: "1"
+            INFO: "1"
+            NETWORKS: "1"
+            SERVICES: "1"
+            TASKS: "1"
+            VOLUMES: "1"
+            DISABLE_IPV6: "1"
           ports:
-            - 2375:2375
+            - "2375:2375"
           networks:
             - dockerproxy
           volumes:
-            - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
+            - /var/run/docker.sock:/var/run/docker.sock:ro  # Mounted as read-only
           restart: unless-stopped
   register: output
 
-- ansible.builtin.debug:
-    var: output
 
-- ansible.builtin.assert:
+-  ansible.builtin.debug:
+    var: output  # Print the entire output variable to understand its structure
+
+-  ansible.builtin.assert:
     that:
-      - "output.services.dockerproxy.dockerproxy.state.running"
+      - output.containers | selectattr('Name', 'equalto', 'dockerproxy') | list | length > 0  # Ensure the container exists
+      - output.containers | selectattr('Name', 'equalto', 'dockerproxy') | map(attribute='State') | list | first == 'running'  # Check if the container is running
