--- a/roles/glances/tasks/main.yml
+++ b/roles/glances/tasks/main.yml
@@ -2,9 +2,10 @@
     glances_service: "{{ services['glances-'~inventory_hostname] }}"
 
 - name: Start glances
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_name: glances
-    pull: yes
+    pull: "always"  # Set to "always", "missing", "never", or "policy" based on your needs
+    state: present  # Ensure the services are started
     definition:
       version: '3.8'
       services:
@@ -15,15 +16,15 @@
           ports:
             - "61208-61209:61208-61209"
           environment:
-            - GLANCES_OPT=-w
+            GLANCES_OPT: "-w"  # Use key-value pairs instead of list format
           volumes:
             - /var/run/docker.sock:/var/run/docker.sock:ro
             - /etc/os-release:/etc/os-release:ro
           pid: host
           labels:
-            homepage.group: "{{glances_service.group}}"
-            homepage.name: "{{glances_service.name}}"
-            homepage.href: "https://glances-{{inventory_hostname}}.lan"
+            homepage.group: "{{ glances_service.group }}"
+            homepage.name: "{{ glances_service.name }}"
+            homepage.href: "https://glances-{{ inventory_hostname }}.lan"
             homepage.icon: "glances.png"
             homepage.server: "{{ inventory_hostname }}"
             homepage.container: "glances"
