--- a/roles/media/tasks/main.yml
+++ b/roles/media/tasks/main.yml
@@ -22,64 +22,64 @@
   - "{{navidrome_data_folder}}"
 
 - name: Start media services
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_name: jellyfin
-    pull: yes
+    pull: "always"  # Set to "always", "missing", "never", or "policy" based on your needs
+    state: present  # Ensure the services are started
     definition:
-
       version: '3.5'
       services:
         jellyfin:
           image: jellyfin/jellyfin
           container_name: jellyfin
-          user: "{{uid}}:{{uid}}"
+          user: "{{ uid }}:{{ uid }}"
           network_mode: 'host'
           volumes:
-            - "{{jellyfin_config_folder}}:/config"
+            - "{{ jellyfin_config_folder }}:/config"
             - jellyfin-cache:/cache
-            - "{{jellyfin_movie_folder}}:/movies"
-            - "{{jellyfin_shows_folder}}:/shows"
-            - "{{jellyfin_music_folder}}:/music"
-          restart: 'unless-stopped'
+            - "{{ jellyfin_movie_folder }}:/movies"
+            - "{{ jellyfin_shows_folder }}:/shows"
+            - "{{ jellyfin_music_folder }}:/music"
+          restart: unless-stopped
           # Optional - alternative address used for autodiscovery
           environment:
-            - JELLYFIN_PublishedServerUrl=http://192.168.50.5:8096
+            JELLYFIN_PublishedServerUrl: "http://192.168.50.5:8096"
           # Optional - may be necessary for docker healthcheck to pass if running in host network mode
           extra_hosts:
-            - "host.docker.internal:host-gateway"
+            host.docker.internal: host-gateway
           labels:
-            - "homepage.group={{services.jellyfin.group}}"
-            - "homepage.name=jellyfin"
-            - "homepage.href=https://jellyfin.lan"
-            - "homepage.icon=jellyfin.png"
-            - "homepage.server={{ inventory_hostname }}"
-            - "homepage.container=jellyfin"
-            - "homepage.widget.type=jellyfin"
-            - "homepage.widget.url=http://192.168.50.5:8096"
-            - "homepage.widget.key={{jellyfin_api_key}}"
+            homepage.group: "{{ services.jellyfin.group }}"
+            homepage.name: jellyfin
+            homepage.href: https://jellyfin.lan
+            homepage.icon: jellyfin.png
+            homepage.server: "{{ inventory_hostname }}"
+            homepage.container: jellyfin
+            homepage.widget.type: jellyfin
+            homepage.widget.url: "http://192.168.50.5:8096"
+            homepage.widget.key: "{{ jellyfin_api_key }}"
 
         navidrome:
           image: deluan/navidrome:latest
           container_name: navidrome
-          user: "{{uid}}:{{uid}}" # should be owner of volumes
+          user: "{{ uid }}:{{ uid }}"  # should be owner of volumes
           ports:
             - "{{ navidrome_http_port }}:4533"
           restart: unless-stopped
-          #environment:
           volumes:
-            - "{{navidrome_data_folder}}:/data"
-            - "{{jellyfin_music_folder}}:/music:ro"
+            - "{{ navidrome_data_folder }}:/data"
+            - "{{ jellyfin_music_folder }}:/music:ro"
           labels:
-            - "homepage.group={{services.music.group}}"
-            - "homepage.name=Navidrome"
-            - "homepage.href=https://music.lan"
-            - "homepage.icon=navidrome.png"
-            - "homepage.server={{ inventory_hostname }}"
-            - "homepage.container=navidrome"
-            - "homepage.widget.type=navidrome"
-            - "homepage.widget.url=https://music.lan"
-            - "homepage.widget.user=daniel"
-            - "homepage.widget.token={{navidrome_token}}"
-            - "homepage.widget.salt={{navidrome_salt}}"
+            homepage.group: "{{ services.music.group }}"
+            homepage.name: Navidrome
+            homepage.href: https://music.lan
+            homepage.icon: navidrome.png
+            homepage.server: "{{ inventory_hostname }}"
+            homepage.container: navidrome
+            homepage.widget.type: navidrome
+            homepage.widget.url: https://music.lan
+            homepage.widget.user: daniel
+            homepage.widget.token: "{{ navidrome_token }}"
+            homepage.widget.salt: "{{ navidrome_salt }}"
+
       volumes:
-        jellyfin-cache:
+        jellyfin-cache: {}  # Define the volume
