--- a/roles/storage/tasks/main.yml
+++ b/roles/storage/tasks/main.yml
@@ -52,9 +52,10 @@
 
 
 - name: Start Storage
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_name: storage
-    pull: yes
+    pull: "always"  # Set to "always", "missing", "never", or "policy" based on your needs
+    state: present  # Ensure the services are started
     definition:
       version: '3'
       services:
@@ -64,49 +65,35 @@
           image: servercontainers/samba
           restart: unless-stopped
           network_mode: host
-          #cap_add:
-          #  - CAP_NET_ADMIN
           environment:
             MODEL: 'TimeCapsule'
             AVAHI_NAME: nuc
-
             SAMBA_CONF_LOG_LEVEL: 3
-
-            # uncomment to disable optional services
-            WSDD2_DISABLE: 1
-            #AVAHI_DISABLE: 1
-
+            WSDD2_DISABLE: 1  # uncomment to disable optional services
             ACCOUNT_nuc: nucpass
-            # UID_nuc: "{{ uid }}"
-
             ACCOUNT_daniel: "daniel:1000:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX:361FA5DCDEC7F04CC65A84100D147EA0:[U          ]:LCT-643D057C:"
             UID_daniel: "{{ uid_personal }}"
-
-            SAMBA_GLOBAL_STANZA: "guest account = {{username}}"
-
-            SAMBA_VOLUME_CONFIG_Medien:     "[Medien]; path=/shares/Medien; valid users = daniel, nuc; browseable = yes; guest ok = yes; read only = no; force group = users; create mask = 0775; directory mask = 0755"
-            SAMBA_VOLUME_CONFIG_dreifuenf:  "[TimeMachine]; path=/shares/dreifuenf/timemachine/%U; valid users = daniel; guest ok = no; read only = no; browseable = yes; fruit:time machine = yes"
-            SAMBA_VOLUME_CONFIG_config:     "[Config]; path=/shares/config; valid users = daniel; guest ok = no; read only = no; browseable = yes; create mask = 0775; directory mask = 0755; force user = {{username}}; force group = users;"
-          
+            SAMBA_GLOBAL_STANZA: "guest account = {{ username }}"
+            SAMBA_VOLUME_CONFIG_Medien: "[Medien]; path=/shares/Medien; valid users = daniel, nuc; browseable = yes; guest ok = yes; read only = no; force group = users; create mask = 0775; directory mask = 0755"
+            SAMBA_VOLUME_CONFIG_dreifuenf: "[TimeMachine]; path=/shares/dreifuenf/timemachine/%U; valid users = daniel; guest ok = no; read only = no; browseable = yes; fruit:time machine = yes"
+            SAMBA_VOLUME_CONFIG_config: "[Config]; path=/shares/config; valid users = daniel; guest ok = no; read only = no; browseable = yes; create mask = 0775; directory mask = 0755; force user = {{ username }}; force group = users;"
           volumes:
             - /etc/avahi/services/:/external/avahi
-            
-            # avoid loops when mounting folders to /shares (I'd recommend explicit mapping for each share)
             - /mnt/Medien:/shares/Medien
             - /mnt/dreifuenf:/shares/dreifuenf
             - "{{ config_root }}:/shares/config"
+
         syncthing:
           image: lscr.io/linuxserver/syncthing:latest
           container_name: syncthing
-          # hostname: syncthing #optional
           environment:
-            - "PUID={{ uid }}"
-            - "PGID={{ uid }}"
-            - TZ=Europe/Berlin
+            PUID: "{{ uid }}"
+            PGID: "{{ uid }}"
+            TZ: Europe/Berlin
           volumes:
-            - "{{syncthing_config_folder}}:/config"
-            - "{{syncthing_data_folder}}:/data"
-            - "/{{mount_root}}/Medien:/Medien"
+            - "{{ syncthing_config_folder }}:/config"
+            - "{{ syncthing_data_folder }}:/data"
+            - "/{{ mount_root }}/Medien:/Medien"
           ports:
             - "{{ syncthing_http_port }}:8384"
             - 22000:22000/tcp
