--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -58,7 +58,7 @@
     repo: 'https://github.com/tribut/homeassistant-docker-venv'
     dest: "{{homeassistant_config_folder}}/docker"
     force: yes
-  become: yes
+  become: true
   become_user: "{{username}}"
 
 - name: Reposess config folders
@@ -97,10 +97,10 @@
       services:
         homeassistant:
           container_name: homeassistant
-          image: "ghcr.io/home-assistant/home-assistant:stable"
+          image: "ghcr.io/home-assistant/home-assistant:latest"
           volumes:
             - "{{homeassistant_config_folder}}:/config"
-            - "{{homeassistant_config_folder}}/docker/run:/etc/services.d/home-assistant/run"
+            #- "{{homeassistant_config_folder}}/docker/run:/etc/services.d/home-assistant/run"
             - "{{homeassistant_media_folder}}:/media"
             - /etc/localtime:/etc/localtime:ro
             - /run/dbus:/run/dbus:ro
@@ -112,10 +112,11 @@
             - "{{ homelab_nuc_ip }}"          
           #devices:
           #  - /dev/ttyACM0 # zigbee coordinator - z2m uses this
-          environment:
-            - PUID={{uid}}
-            - PGID={{uid}}
-            - UMASK=007
+          #environment:
+            #- PUID={{uid}}
+            #- PGID={{uid}}
+            #- "PACKAGES=iputils"
+            #- UMASK=007
           labels:
             - 'wud.tag.include=^\d+\.\d+\.\d+$$'
             - 'wud.link.template=https://github.com/home-assistant/core/releases/tag/$${major}.$${minor}.$${patch}'
