--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -34,6 +34,7 @@ navidrome_http_port: 4533
 syncthing_http_port: 8384
 ring_mqtt_rtsp_port: 8556
 open_webui_http_port: 3123
+babybuddy_http_port: 8008
 sunshine_address: 192.168.50.33
 sunshine_http_port: 47990
 uid: 1000
@@ -72,3 +73,4 @@ openwakeword_data_folder: "{{config_root}}/openwakeword"
 satellite_data_folder: "{{config_root}}/satellite"
 piper_data_folder: "{{config_root}}/piper"
 whisper_data_folder: "{{config_root}}/whisper"
+babybuddy_config_folder: "{{config_root}}/babybuddy"
