--- a/setup.yml
+++ b/setup.yml
@@ -14,6 +14,7 @@
 
     - { role: storage, become: yes, tags: ["storage"] }
     - { role: homeassistant, become: yes, tags: ["ha"] }
+    - { role: babybuddy, become: yes, tags: ["babybuddy"] }
     - { role: fix_hass_bluetooth, become: yes, tags: ["ha"]}
     - { role: wyoming, become: yes, tags: ["wyoming"] }
     - { role: media, become: yes, tags: ["media"] }
